# oh-distro

./: .gitignore  .gitmodules  README.rst  additional_instructions_open_source_release.rst
catkin_ws/scripts/: simple_command_arms.py  simple_command_pelvis.py  simple_command_whole_body.py  simple_command_whole_body_v0.py  simple_command_whole_body_v1.py  zero_arms.py  zero_neck.py
catkin_ws/src/: dual_arm_husky_description  lms1xx  robotiq_force_torque_sensor  robotiq_hand_description  ur_description
catkin_ws/src/dual_arm_husky_ros_lcm_translators/: CMakeLists.txt  package.xml
catkin_ws/src/dual_arm_husky_ros_lcm_translators/src/: lcm2ros_dual_arm_husky.cpp  ros2lcm_dual_arm_husky.cpp
catkin_ws/src/ihmc_msgs/: CMakeLists.txt
catkin_ws/src/oh_translators/: CMakeLists.txt  package.xml
catkin_ws/src/oh_translators/launch/: dual_arm_husky_bridge.launch  ihmc_bridge.launch  octomap_server.launch
catkin_ws/src/oh_translators/src/: lcm2ros_dual_arm_husky.cpp  lcm2ros_exotica.cpp  lcm2ros_ihmc.cpp  lcm2ros_ihmc.hpp  lcm2ros_ihmc_conversions.cpp  lcm2ros_ihmc_conversions.hpp  lcm2ros_ihmc_footsteps.cpp  lcm2ros_ihmc_modes.cpp  lcm2ros_ihmc_motionplans.cpp  lcm2ros_ihmc_pose.cpp  ros2lcm_camera.cpp  ros2lcm_dual_arm_husky.cpp  ros2lcm_husky.cpp  ros2lcm_ihmc.cpp  ros2lcm_kinect.cpp  ros2lcm_stereo.cpp  ros2lcm_test.cpp
catkin_ws/src/robotiq_force_torque_sensor_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/sicktoolbox_wrapper/: CMakeLists.txt  package.xml
catkin_ws/src/sicktoolbox_wrapper/src/: ros2lcm_sick.cpp
software/: tobuild.txt
software/config/: drc_environment.sh
software/config/atlas/: multisense_02.cfg  multisense_02_pre_upgrade.cfg  multisense_05.cfg
software/config/dual_arm_husky/: robot.cfg  robot.pmd
software/config/git_config/: drc-authors-transform.txt
software/config/husky/: navigation.pmd  robot.cfg  robot.pmd
software/config/kuka_lwr/: robot.cfg  robot.pmd
software/config/signal_scope/atlas/: republish_pose_body_diff.py  se_analysis_atlas.py  se_left_leg.py  se_right_leg.py
software/config/signal_scope/dual_arm_husky/: LeftArmVel.py  RightArmVel.py
software/config/signal_scope/husky/: imu-acc-gyro-snippet.py
software/config/signal_scope/standalone_plate/: imu-acc-gyro-snippet.py
software/config/signal_scope/val/: joint_tracking.py  se_bias.py  se_orientation.py
software/config/val/: alpha_filter.cfg  core_config.cfg  multisense_C_xx.cfg  multisense_D_50.cfg  robot.cfg  robot.pmd  state_correction.cfg
software/config/val_mit/: core_config.cfg  multisense_B_50.cfg
software/config/val_sim_mit/: multisense.cfg
software/config/val_sim_scs/: alpha_filter.cfg  multisense.cfg  robot.cfg  robot.pmd  state_correction.cfg
software/config/video_capture/: video_capture_edi.pmd
software/control/: add_ctrl_path.m
software/control/contact_monitor/src/: CMakeLists.txt  contact-monitor.cpp
software/control/matlab/planners/: BasePlanner.m
software/control/matlab/systems/: OHValkyrie.m
software/control/src/: BotParamClient.cpp  CMakeLists.txt  HeightMapWrapper.cpp
software/control/src/tests/: testDrakeBulletCollisions.cpp
software/drivers/: tobuild.txt
software/examples/gaze_following/src/: gazeTrackingDemo.cpp
software/ihmc/ihmc_step/: main_ihmc.py
software/ihmc/lcmtypes/: ihmc_footstep_status_t.lcm
software/latency/src/latency/: latency-app.cpp
software/maps_server/: tobuild.txt
software/maps_server/maps_lcmtypes/: CMakeLists.txt
software/maps_server/maps_lcmtypes/lcmtypes/: maps_blob_t.lcm  maps_catalog_t.lcm  maps_cloud_t.lcm  maps_command_t.lcm  maps_data_request_list_t.lcm  maps_data_request_t.lcm  maps_depth_settings_t.lcm  maps_image_t.lcm  maps_octree_t.lcm  maps_params_t.lcm  (+9 more)
software/maps_server/maps_server/: CMakeLists.txt
software/maps_server/maps_utils/: CMakeLists.txt
software/maps_server/maps_utils/src/maps_utils/: BotWrapper.cpp  BotWrapper.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Clock.cpp  Clock.hpp  LcmWrapper.cpp  LcmWrapper.hpp  LidarUtils.cpp  LidarUtils.hpp  PointConvert.h  PointerUtils.hpp  RansacGeneric.hpp  ThreadSafeQueue.hpp
software/models/IRB140/: director_config.json
software/models/dual_arm_husky_description/: CMakeLists.txt  Modifications.md  Modifications.txt  director_config.json  fp_alternative.mat  fp_arms_stowed.mat  husky_gazebo_readme.md  package.xml  stored_poses.json
software/models/husky_description/: husky_gazebo_readme.md  model.urdf
software/models/lwr_defs/: director_config.json
software/models/val_description/: director_config.json  director_config_simple.json  stored_poses.json
software/models/worlds/: terrain_boxroom.sdf
software/modules/dualarmhuskydirector/: PTU.py  botFrameSync.py  bumblebee_to_xtion_transform_publisher.py  dah_demo.py  huskynavigationpanel.py  huskyplanningpanel.py  planar_lidar.py  runstartup.py  set_ptu.py  startup.py
software/modules/lwrdirector/: mappingdemo.py  mappingpanel.py  runstartup.py  startup.py  tabledemo.py
software/modules/ohdirector/: framepositionpub.py  startup.py  tableboxdemo.py  tableplanningdemo.py  tablesimpledemo.py  trajectorytrackingtest.py  valkyriedriver.py  valkyriedriverpanel.py
software/modules/wrist-control/: relay-wrist-commands.py
software/motion_estimate/: tobuild.txt
software/motion_estimate/state_sync/: CMakeLists.txt
software/motion_estimate/state_sync/src/artificial_drift/: CMakeLists.txt  artificial_drift.cpp  artificial_drift.hpp
software/perception/: tobuild.txt
software/perception/image-passthrough/: CMakeLists.txt
software/perception/image_io_utils/: CMakeLists.txt
software/perception/mapping2d/: CMakeLists.txt
software/perception/multisense_image_filter/: CMakeLists.txt
software/perception/multisense_image_filter/src/multisense_image_filter/: CMakeLists.txt  ImageFilter.cpp
software/perception/multisense_utils/: CMakeLists.txt
software/perception/plane-seg/: CMakeLists.txt
software/planning/: CMakeLists.txt
software/planning/matlab/: CapabilityMap.m  SE3MotionPlanningTree.m  Scenes.m
software/utils/drc_utils/: CMakeLists.txt
(+150 files in other folders)
